# ZSCTF2020

./: ..gitattributes.un~  .gitattributes  README.md
crypto/decypher/: Encrypt.java  README.md
crypto/decypher/题目/: Decrypt.java  flag.txt
crypto/decypher/题解/: writeup.py
crypto/guess(100)/: README.md
crypto/guess(100)/题目/: build.bat  guess.c  题目&简介&flag.txt
crypto/guess(100)/题解/: base64.md  writeup.c
crypto/swap/: README.md
crypto/swap/题目/: build.bat  swap.c
crypto/swap/题解/: writeup.c
crypto/wysinwyt/: README.md
crypto/wysinwyt/题目/: build.bat  wysinwyt.c
crypto/wysinwyt/题解/: writeup.c
human-machine/NIM/: README.md
human-machine/NIM/docker/: Dockerfile  docker-compose.yml
human-machine/NIM/题解/: writeup.py
misc/colorfulqr/: README.md  make_attachment_qrcode.py  make_flag_qrcode.py
misc/colorfulqr/题解/: writeup.py
misc/farewell/: README.md
misc/hacknet_game/: README.md
misc/picross/: .gitattributes  .gitignore  README.md  generate_numbers.py  make_qrcode.py  zsctf2020_qrcode.ppw
misc/picross/题目/: build.bat  picross.py  puzzle.txt
misc/starcraft/: README.md
pwn/race/: CMakeLists.txt  README.md
pwn/race/challenge/: race
pwn/race/docker/: ctf.xinetd  docker-compose.yml  start.sh
pwn/race/src/: race.c
pwn/race/wp/: exp.py
pwn/simple_fmt/: README.md
re/be_careful/: README.md
re/hacknet/: .gitignore  Encrypt.cs  README.md
re/iwanna/: README.md
re/reverse/: README.md
re/rsx/: README.md
social-engineer/1/: README.md
social-engineer/2/: README.md
social-engineer/3/: README.md
web/git_and_vim/: README.md
(+34 files in other folders)
